--- a/clang/lib/Headers/CMakeLists.txt
+++ b/clang/lib/Headers/CMakeLists.txt
@@ -160,6 +160,7 @@ set(openmp_wrapper_files
   openmp_wrappers/cmath
   openmp_wrappers/complex.h
   openmp_wrappers/complex
+  openmp_wrappers/__clang_openmp_offloading.h
   openmp_wrappers/__clang_openmp_device_functions.h
   openmp_wrappers/complex_cmath.h
   openmp_wrappers/new
